--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>My Blog</title>
 		<link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="art-site/style.css" />
+
 	</head>
 	
 	<body>
