--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 	<head>
 		<title>My Blog</title>
-		<link rel="stylesheet" type="text/css" href="art-site/style.css" >
-		<link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
-		
+		<link rel="stylesheet" type="text/css" href="art-site/style.css" />
 
 	</head>
 	
