--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>My Blog</title>
-		<link rel="stylesheet" type="text/css" href="art-site/style.css" />
+		<link rel="stylesheet" type="text/css" href="art-site.github.io/style.css" />
 
 	</head>
 	
