--- a/ash/html/index.html
+++ b/ash/html/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>My Blog</title>
 	<!-- 	<link rel="stylesheet" type="text/css" href="art-site.github.io/style.css" />  -->
-		<link rel="stylesheet" href="art-site.github.io/css/style.css">
+		<link rel="stylesheet" href="/ash/css/style.css">
 
 	</head>
 	
