--- a/ash/html/index.html
+++ b/ash/html/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>My Blog</title>
 	<!-- 	<link rel="stylesheet" type="text/css" href="art-site.github.io/style.css" />  -->
 		<link rel="stylesheet" href="../css/style.css">
