--- a/ash/html/index.html
+++ b/ash/html/index.html
@@ -1,8 +1,9 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>My Blog</title>
+		<title>cloud-nft.github.io</title>
 	<!-- 	<link rel="stylesheet" type="text/css" href="art-site.github.io/style.css" />  -->
 		<link rel="stylesheet" href="../css/style.css">
 
