--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>cloud-nft.github.io</title>
 	<!-- 	<link rel="stylesheet" type="text/css" href="art-site.github.io/style.css" />  -->
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="styles.css">
 
 	</head>
 	
